<resources>
    <string name="app_name">Clock Plus</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="createalarm">Create New Alarm</string>
    <string name="calendar_alarm">Create New Calendar Alarm</string>
    <string name="world_clock">I\'m a world clock</string>
    <string name="timer">I\'m a timer</string>
    <string name="disabled">Disabled</string>
    <string name="new_alarm_short">New Alarm</string>
    <string name="new_alarm_long">New Alarm</string>
    <string name="stop_watch">I\'m a stopwatch</string>
    <string name="alarmText">Wake up!</string>
    <string name="alarmTime">Alarm Time</string>
    <string name="repeat">Repeat</string>
    <string name="delete">Delete</string>
    <string name="alarmSettings">Alarm Settings</string>
    <string name="settings">Settings</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="alarmNameSubText">Alarm Name</string>
    <string name="alarmNameHint">Type Alarm Name Here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="account">Account</string>
    <string name="calendar">Calendar</string>
    <string name="timeBefore">Time Before Event</string>
    <string-array name="calendar_alarm_options">
        <item>Account</item>
        <item>Calendar</item>
        <item>Time Before Event</item>
        <item>Alarm Tone</item>
    </string-array>
</resources>
