<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/AppTheme"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <TextView
        style="@style/AppTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/createalarm"
        android:textColor="@color/colorText"
        android:textSize="36sp" />

    <Button
        android:id="@+id/alarmTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="8:00 A.M."
        android:textSize="60sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:id="@+id/monday"
            android:layout_weight="1"
            android:text="@string/monday"
            android:padding="1dp"
            android:background="@drawable/day_ripple"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:id="@+id/tuesday"
            android:layout_weight="1"
            android:text="@string/tuesday"
            android:padding="1dp"
            android:background="@drawable/day_ripple"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:id="@+id/wednesday"
            android:layout_weight="1"
            android:text="@string/wednesday"
            android:padding="1dp"
            android:background="@drawable/day_ripple"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:id="@+id/thursday"
            android:layout_weight="1"
            android:text="@string/thursday"
            android:padding="1dp"
            android:background="@drawable/day_ripple"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:id="@+id/friday"
            android:layout_weight="1"
            android:text="@string/friday"
            android:padding="1dp"
            android:background="@drawable/day_ripple"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:id="@+id/saturday"
            android:layout_weight="1"
            android:text="@string/saturday"
            android:padding="1dp"
            android:background="@drawable/day_ripple"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:id="@+id/sunday"
            android:layout_weight="1"
            android:text="@string/sunday"
            android:padding="1dp"
            android:background="@drawable/day_ripple"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alarmNameSubText"
        android:layout_marginLeft="5dp"
        android:textColor="@color/colorText"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:paddingLeft="5dp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:hint="@string/alarmNameHint"
        android:background="@color/colorHint"/>

    <Button
        android:id="@+id/deleteAlarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete" />


</LinearLayout>
